--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.3.0",
     "firebase-tools": "^9.22.0",
     "node-sass": "^6.0.1",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
