--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,8 @@ src/common/api/recipeApiKey.js
 
 # image
 
-src/common/images/**
-
+src/common/images/detail.png
+src/common/images/favorite.png
+src/common/images/list.png
+src/common/images/homepage.png
+src/common/images/header.jpg
