--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,6 @@ src/common/api/recipeApiKey.js
 
 src/images/detail.png
 src/images/favorite.png
-src/images/header.png
+src/images/header.jpg
 src/images/homepage.png
 src/images/list.png
