--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,4 @@ src/common/api/recipeApiKey.js
 
 # images
 
-src/images/detail.png
-src/images/favorite.png
-src/images/header.jpg
-src/images/homepage.png
-src/images/list.png
+src/images
